Fix the alignment of the dropdown button for panel actions, Fix spacing issue for tab content.

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -3117,9 +3117,8 @@ If the height and width are not specified the video takes the height of the post
         * {
           vertical-align: middle;
         }
-        span {
-          margin-left: 1em;
-          display:inline-block;
+        i {
+          margin-left: .5em;
         }
       }
     }
@@ -3698,7 +3697,7 @@ If the height and width are not specified the video takes the height of the post
            &.dropdown {
               padding: 2px 5px;
               > .app-anchor {
-                  top: .4em;
+                  //top: .4em;
               }
            }
         }
